--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <form id="transactionForm">
                     <div class="form-group">
                         <label for="amount">Amount (CZK)</label>
-                        <input type="number" id="amount" name="amount" step="50" required>
+                        <input type="number" id="amount" name="amount" step="50" min="1" required>
                     </div>
 
                     <div class="form-group">
@@ -38,10 +38,6 @@
                         <label for="category">Category</label>
                         <select id="category" name="category" required>
                             <option value="">Select category</option>
-                            <option value="Food">Food</option>
-                            <option value="Transport">Transport</option>
-                            <option value="Entertainment">Entertainment</option>
-                            <option value="Other">Other</option>
                         </select>
                     </div>
 
@@ -154,7 +150,7 @@
                 <input type="hidden" id="editId">
                 <div class="form-group">
                     <label for="editAmount">Amount (CZK)</label>
-                    <input type="number" id="editAmount" step="50" required>
+                    <input type="number" id="editAmount" step="50" min="1" required>
                 </div>
                 <div class="form-group">
                     <label for="editType">Transaction Type</label>
@@ -166,10 +162,7 @@
                 <div class="form-group">
                     <label for="editCategory">Category</label>
                     <select id="editCategory" required>
-                        <option value="Food">Food</option>
-                        <option value="Transport">Transport</option>
-                        <option value="Entertainment">Entertainment</option>
-                        <option value="Other">Other</option>
+                        <option value="">Select category</option>
                     </select>
                 </div>
                 <div class="form-group">
